objects/NHM_Building__c.object
<CustomObject>
    <fields>
        <fullName>NHM_BuildingNameId__c</fullName>
        <externalId>true</externalId>
        <label>NHM_BuildingNameId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_CC_List__c</fullName>
        <description>NHm CC list for report</description>
        <inlineHelpText>NHm CC list for report</inlineHelpText>
        <label>NHM_CC_List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NHM_To_List__c</fullName>
        <description>TO List for report</description>
        <inlineHelpText>TO List for report</inlineHelpText>
        <label>NHM_To_List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>NHM_Building</label>
    <nameField>
        <label>NHM_Building Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NHM_Buildings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>